static/psi4manual/1.0.0/_sources/autodir_psivariables/module__detci.txt
.. _`apdx:detci_psivar`:


DETCI
=====

Performs configuration interaction (CI) computations of various types, including restricted-active-space (RAS) CI, full CI, the CI component of multi-configuration self-consistent-field (MCSCF) and complete-active-space self-consistent-field (CASSCF) computations, and arbitrary-order perturbation theory and arbitrary-order coupled-cluster computations for small molecules.

.. hlist::
   :columns: 1

   * :psivar:`CI CORRELATION ENERGY <CICORRELATIONENERGY>`

   * :psivar:`CI DIPOLE X <CIDIPOLEX>`

   * :psivar:`CI DIPOLE Y <CIDIPOLEY>`

   * :psivar:`CI DIPOLE Z <CIDIPOLEZ>`

   * :psivar:`CI QUADRUPOLE XX <CIQUADRUPOLEXX>`

   * :psivar:`CI QUADRUPOLE XY <CIQUADRUPOLEXY>`

   * :psivar:`CI QUADRUPOLE XZ <CIQUADRUPOLEXZ>`

   * :psivar:`CI QUADRUPOLE YY <CIQUADRUPOLEYY>`

   * :psivar:`CI QUADRUPOLE YZ <CIQUADRUPOLEYZ>`

   * :psivar:`CI QUADRUPOLE ZZ <CIQUADRUPOLEZZ>`

   * :psivar:`CI STATE-AVERAGED CORRELATION ENERGY <CISTATE-AVERAGEDCORRELATIONENERGY>`

   * :psivar:`CI STATE-AVERAGED TOTAL ENERGY <CISTATE-AVERAGEDTOTALENERGY>`

   * :psivar:`CI TOTAL ENERGY <CITOTALENERGY>`

   * :psivar:`CISD CORRELATION ENERGY <CISDCORRELATIONENERGY>`

   * :psivar:`CISD TOTAL ENERGY <CISDTOTALENERGY>`

   * :psivar:`CISDT CORRELATION ENERGY <CISDTCORRELATIONENERGY>`

   * :psivar:`CISDT TOTAL ENERGY <CISDTTOTALENERGY>`

   * :psivar:`CISDTQ CORRELATION ENERGY <CISDTQCORRELATIONENERGY>`

   * :psivar:`CISDTQ TOTAL ENERGY <CISDTQTOTALENERGY>`

   * :psivar:`CURRENT CORRELATION ENERGY <CURRENTCORRELATIONENERGY>`

   * :psivar:`CURRENT ENERGY <CURRENTENERGY>`

   * :psivar:`CURRENT REFERENCE ENERGY <CURRENTREFERENCEENERGY>`

   * :psivar:`FCI CORRELATION ENERGY <FCICORRELATIONENERGY>`

   * :psivar:`FCI TOTAL ENERGY <FCITOTALENERGY>`

   * :psivar:`MCSCF TOTAL ENERGY <MCSCFTOTALENERGY>`

   * :psivar:`MPn CORRELATION ENERGY <MPnCORRELATIONENERGY>`

   * :psivar:`MPn TOTAL ENERGY <MPnTOTALENERGY>`

   * :psivar:`ZAPTn CORRELATION ENERGY <ZAPTnCORRELATIONENERGY>`

   * :psivar:`ZAPTn TOTAL ENERGY <ZAPTnTOTALENERGY>`


