static/psi4manual/4.0b4/_sources/autodir_psivariables/module__detci.txt
.. _`apdx:detci_psivar`:


DETCI
=====

Performs configuration interaction (CI) computations of various types, including restricted-active-space (RAS) CI, full CI, the CI component of multi-configuration self-consistent-field (MCSCF) and complete-active-space self-consistent-field (CASSCF) computations, and arbitrary-order perturbation theory and arbitrary-order coupled-cluster computations for small molecules.

.. hlist::
   :columns: 1

   * :psivar:`CI CORRELATION ENERGY <CICORRELATIONENERGY>`

   * :psivar:`CI DIPOLE X <CIDIPOLEX>`

   * :psivar:`CI DIPOLE Y <CIDIPOLEY>`

   * :psivar:`CI DIPOLE Z <CIDIPOLEZ>`

   * :psivar:`CI QUADRUPOLE XX <CIQUADRUPOLEXX>`

   * :psivar:`CI QUADRUPOLE XY <CIQUADRUPOLEXY>`

   * :psivar:`CI QUADRUPOLE XZ <CIQUADRUPOLEXZ>`

   * :psivar:`CI QUADRUPOLE YY <CIQUADRUPOLEYY>`

   * :psivar:`CI QUADRUPOLE YZ <CIQUADRUPOLEYZ>`

   * :psivar:`CI QUADRUPOLE ZZ <CIQUADRUPOLEZZ>`

   * :psivar:`CI ROOT n -> ROOT m DIPOLE X <CIROOTn->ROOTmDIPOLEX>`

   * :psivar:`CI ROOT n -> ROOT m DIPOLE Y <CIROOTn->ROOTmDIPOLEY>`

   * :psivar:`CI ROOT n -> ROOT m DIPOLE Z <CIROOTn->ROOTmDIPOLEZ>`

   * :psivar:`CI ROOT n -> ROOT m QUADRUPOLE XX <CIROOTn->ROOTmQUADRUPOLEXX>`

   * :psivar:`CI ROOT n -> ROOT m QUADRUPOLE XY <CIROOTn->ROOTmQUADRUPOLEXY>`

   * :psivar:`CI ROOT n -> ROOT m QUADRUPOLE XZ <CIROOTn->ROOTmQUADRUPOLEXZ>`

   * :psivar:`CI ROOT n -> ROOT m QUADRUPOLE YY <CIROOTn->ROOTmQUADRUPOLEYY>`

   * :psivar:`CI ROOT n -> ROOT m QUADRUPOLE YZ <CIROOTn->ROOTmQUADRUPOLEYZ>`

   * :psivar:`CI ROOT n -> ROOT m QUADRUPOLE ZZ <CIROOTn->ROOTmQUADRUPOLEZZ>`

   * :psivar:`CI ROOT n CORRELATION ENERGY <CIROOTnCORRELATIONENERGY>`

   * :psivar:`CI ROOT n DIPOLE X <CIROOTnDIPOLEX>`

   * :psivar:`CI ROOT n DIPOLE Y <CIROOTnDIPOLEY>`

   * :psivar:`CI ROOT n DIPOLE Z <CIROOTnDIPOLEZ>`

   * :psivar:`CI ROOT n QUADRUPOLE XX <CIROOTnQUADRUPOLEXX>`

   * :psivar:`CI ROOT n QUADRUPOLE XY <CIROOTnQUADRUPOLEXY>`

   * :psivar:`CI ROOT n QUADRUPOLE XZ <CIROOTnQUADRUPOLEXZ>`

   * :psivar:`CI ROOT n QUADRUPOLE YY <CIROOTnQUADRUPOLEYY>`

   * :psivar:`CI ROOT n QUADRUPOLE YZ <CIROOTnQUADRUPOLEYZ>`

   * :psivar:`CI ROOT n QUADRUPOLE ZZ <CIROOTnQUADRUPOLEZZ>`

   * :psivar:`CI ROOT n TOTAL ENERGY <CIROOTnTOTALENERGY>`

   * :psivar:`CI STATE-AVERAGED CORRELATION ENERGY <CISTATE-AVERAGEDCORRELATIONENERGY>`

   * :psivar:`CI STATE-AVERAGED TOTAL ENERGY <CISTATE-AVERAGEDTOTALENERGY>`

   * :psivar:`CI TOTAL ENERGY <CITOTALENERGY>`

   * :psivar:`CISD CORRELATION ENERGY <CISDCORRELATIONENERGY>`

   * :psivar:`CISD TOTAL ENERGY <CISDTOTALENERGY>`

   * :psivar:`CISDT CORRELATION ENERGY <CISDTCORRELATIONENERGY>`

   * :psivar:`CISDT TOTAL ENERGY <CISDTTOTALENERGY>`

   * :psivar:`CISDTQ CORRELATION ENERGY <CISDTQCORRELATIONENERGY>`

   * :psivar:`CISDTQ TOTAL ENERGY <CISDTQTOTALENERGY>`

   * :psivar:`CIn CORRELATION ENERGY <CInCORRELATIONENERGY>`

   * :psivar:`CIn TOTAL ENERGY <CInTOTALENERGY>`

   * :psivar:`CURRENT CORRELATION ENERGY <CURRENTCORRELATIONENERGY>`

   * :psivar:`CURRENT ENERGY <CURRENTENERGY>`

   * :psivar:`CURRENT REFERENCE ENERGY <CURRENTREFERENCEENERGY>`

   * :psivar:`FCI CORRELATION ENERGY <FCICORRELATIONENERGY>`

   * :psivar:`FCI TOTAL ENERGY <FCITOTALENERGY>`

   * :psivar:`MPn CORRELATION ENERGY <MPnCORRELATIONENERGY>`

   * :psivar:`MPn TOTAL ENERGY <MPnTOTALENERGY>`

   * :psivar:`ZAPTn CORRELATION ENERGY <ZAPTnCORRELATIONENERGY>`

   * :psivar:`ZAPTn TOTAL ENERGY <ZAPTnTOTALENERGY>`


